# enembert

./: .gitignore  DATASET_CARD.md  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: pages.yml
annotation/: guideline.md
demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/public/: score_model.json
demo/src/: main.ts  rubric.ts  scorer.ts  styles.css  tagger.ts
docs/: decisions.md  writeup.md
docs/reports/: baseline.md  eval.md  score-estimate-negative-result.md  score_model_v1.json
scripts/: agreement.py  build_corpus.py  build_review_html.py  build_standoff.py  calibrate_score.py  eval_baseline.py  eval_external.py  eval_model.py  export_onnx.py  freeze_gold.py  label.py  label_rest.py  publish.py  review.py  train_model.py
src/enembert/: schema.py
src/enembert/data/: corpus.py  paragraphs.py  splits.py  standoff.py
src/enembert/export/: onnx_export.py
src/enembert/labeling/: agreement.py  consistency.py  examples.py  labeler.py  review.py  run.py
src/enembert/training/: baseline.py  dataset.py  evaluate.py  predict.py  train.py
tests/: test_agreement.py  test_baseline.py  test_consistency.py  test_corpus.py  test_dataset.py  test_evaluate.py  test_examples.py  test_labeler.py  test_paragraphs.py  test_parity.py  test_predict.py  test_review.py  test_run_guards.py  test_schema.py  test_score_model.py  test_smoke.py  test_splits.py  test_standoff.py
