[project]
name = "enembert"
version = "0.1.0"
description = "Open token-classification model for the ENEM proposta de intervencao (Competencia 5)"
requires-python = ">=3.11"
dependencies = ["datasets>=2.19", "requests>=2.31"]

[project.optional-dependencies]
train = ["torch>=2.2", "transformers>=4.44", "seqeval>=1.2", "accelerate>=0.30"]
export = ["optimum[onnxruntime]>=1.20", "onnxruntime>=1.18"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
